--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -198,4 +198,15 @@
     <string name="accept_this_permission_to_continue">Vous devez accepter cette autorisation si vous souhaitez poursuivre l\'action envisagée.</string>
     <string name="accept_permissions">Veuillez accepter les autorisations</string>
     <string name="see_faqs">voir FAQ</string>
+
+    <!-- Notifications -->
+    <string name="default_notifications_title">Vérifiez Votre Agenda</string>
+    <string name="default_notifications_message">Vérifiez votre agenda, certaines de vos activités sont sur le point d\'expirer.</string>
+    <string name="event_notification_custom_title">Demain, vous avez %s</string>
+    <string name="event_notification_custom_message">%s1 commence demain à %s2 heures.</string>
+    <string name="reminder_notification_custom_title">Rappel %s</string>
+    <string name="reminder_notification_custom_message">Rappelez-vous que demain vous avez %s</string>
+    <string name="task_notification_custom_title">Demain expire %s</string>
+    <string name="task_notification_custom_message">Votre tâche %s expire demain</string>
+
 </resources>
